--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<p>Start editing to see some magic happen here :)</p>
+<H1>Welcome!!! Trent Web2</H1>
+
+<a routerLink="/" routerLinkActive="active">Home</a>
+&nbsp;
+<a routerLink="/ec2" routerLinkActive="active">EC2</a>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
